--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=VacationSolution
 spring.datasource.url=jdbc:mysql://localhost:3306/vacationsolution
 spring.datasource.username=root
-spring.datasource.password=15101210201Ny@
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
@@ -12,8 +12,8 @@ spring.freemarker.expose-request-attributes=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=nikitayasiulevich@gmail.com
-spring.mail.password=qwlhmuxbhbmvwkhu
+spring.mail.username=email@gmail.com
+spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
